syntax = "proto3";

option go_package = "outbox/pb";

service NotificationService {
  rpc AddNotification(AddNotificationRequest) returns (AddNotificationResponse) {}
}

message AddNotificationRequest {
  string eventName = 1 [json_name="eventName"]; 
  string userId = 2 [json_name="userId"]; 
  string message =3 [json_name="message"];
}

message AddNotificationResponse {
  bool success = 1;
  string error = 2; 
}

message Notification {
  string id = 1 [json_name = "id"];
  string userId = 2 [json_name = "user_id"];
  string name = 3 [json_name = "name"];
  string email = 4 [json_name = "email"];
  string message = 5 [json_name = "message"];
  string eventName = 6 [json_name = "event_name"];
  string createdAt = 7 [json_name = "created_at"];
  bool isRead = 8 [json_name = "is_read"];
}

message GetNotificationResponse {
  repeated Notification notifications = 1 [json_name = "notifications"];
}
